# balouf.github.io

./: .buildinfo  .gitignore  README.md  about_me.html  build.py  code.html  genindex.html  index.html  music.html  objects.inv  pyproject.toml  redirect.html  research.html  search.html  searchindex.js  teaching.html
.doctrees/: about_me.doctree  code.doctree  index.doctree  music.doctree  redirect.doctree  research.doctree  teaching.doctree
.github/workflows/: docs.yml
_sources/: about_me.md.txt  code.md.txt  index.md.txt  music.md.txt  research.md.txt  teaching.md.txt
balouf_github_io/: __init__.py  fabmap.py
docs/: about_me.md  code.md  conf.py  music.md  redirect.md  research.md  teaching.md
