[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "balouf_github_io"
version = "0.1.0"
description = "Webpage of Fabien Mathieu"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
maintainers = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]

dependencies = [
    "gismap>=0.2.0",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "myst-parser[linkify]>=4.0.1",
    "nbsphinx>=0.9.7",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-copybutton>=0.5.2",
]
