[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "balouf_github_io"
version = "0.1.0"
description = "Webpage of Fabien Mathieu"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
maintainers = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]

dependencies = [
    "gismap>=0.5.3",
]

[project.urls]
Homepage = "https://balouf.github.io"
Repository = "https://github.com/balouf/balouf.github.io"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "myst-parser[linkify]>=4.0.1",
    "nbsphinx>=0.9.7",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-copybutton>=0.5.2",
]
